2007-08-10  Nick Clifton  <nickc@redhat.com>

	* po/fi.po: Updated Finish translation.
	* po/ga.po: Updated Irish translation.
	* po/vi.po: Updated Vietnamese translation.

2007-08-03  James E. Wilson  <wilson@specifix.com>

	* ia64-gen.c: (main): Add missing newline to copyright message.
	* ia64-ic.tbl (fp-non-arith): Add xmpy.
	* ia64-asmtab.c: Regenerate.
	
2007-08-01  Michael Snyder  <msnyder@access-company.com>

	* i386-dis.c (print_insn): Guard against NULL.

2007-07-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/4834
	* i386-dis.c (EXw): New.
	(prefix_user_table): Updated to use EXw, EXd and EXq for SSE4
	instructions when appropriated.

2007-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/4834
	* i386-dis.c (Eq): New.
	(EMC): Renamed to ...
	(EMCq): This.  Use q_mode instead of v_mode.
	(prefix_user_table): Updated to use EXd, EXq, EMCq, Ed and Eq
	when appropriated.

2007-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (dis386_twobyte): Change "movd" to "movK".
	(prefix_user_table): Likewise.  Use EXq instead of EXx on
	"movq".

2007-07-27  Nathan Sidwell  <nathan@codesourcery.com>

	* ppc-opc (PPC7450): New.
	(powerpc_opcodes): Use it in dcba.

2007-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-gen.c (main): Print a newline after copyright notice.

2007-07-19  Nick Clifton  <nickc@redhat.com>

	PR binutils/4801
	* maxq-dis.c (get_reg_name): Fix the scan of the
	mem_access_syntax_table.

2007-07-16  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (EMq): Removed.
	(EMx): New.
	(prefix_user_table): Replace EMq with EMx.

2007-07-16  Nick Clifton  <nickc@redhat.com>

	* po/nl.po: Updated translation.

2007-07-12  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated translation.
	* po/nl.po: Updated translation.

2007-07-06  Mark Kettenis  <kettenis@gnu.org>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (i386-tbl.h): Add $(srcdir)/ to target.
	(ia64-asmtab.c): Likewise.
	* Makefile.in: Regenerate.
