@@ -4,6 +4,12 @@
 	* po/ga.po: Updated Irish translation.
 	* po/vi.po: Updated Vietnamese translation.
 
+2007-08-9  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-opc.tbl: Add NoRex64 to pmovsxbw, pmovsxwd, pmovsxdq,
+	pmovzxbw, pmovzxwd, pmovzxdq and roundsd.
+	* i386-tbl.h: Regenerated.
+
 2007-08-03  James E. Wilson  <wilson@specifix.com>
 
 	* ia64-gen.c: (main): Add missing newline to copyright message.
